// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copy Dataset Member Failure scenarios cannot replace a member without --replace flag 1`] = `
"================Z/OS FILES COPY DATA SET===============
"
`;

exports[`Copy Dataset Member Failure scenarios copy with invalid enqueue type 1`] = `
"
Syntax Error:
No value specified for option:
--enqueue

This option requires a value of type:
string

Option Description:
Specify this option to choose the enqueue type for the \`to\` data set

Syntax Error:
Invalid value specified for option:
--enqueue (--enq)

You specified:


The value must match one of the following regular expressions:
[ 'EXCLU', 'SHR', 'SHRW' ].

Example:

 - Copy the data set member in data set 'user.from.set' with name 'member.name'
 to data set 'user.to.set' with member name 'member.name':

      $ zowe zos-files copy data-set-member \\"user.from.set\\" \\"member.name\\" \\"user.to.set\\" \\"member.name\\"

Use \\"zowe zos-files copy data-set-member --help\\" to view command description, usage, and options.
"
`;

exports[`Copy Dataset Member Failure scenarios copy with invalid enqueue type 2`] = `
"================Z/OS FILES COPY DATA SET===============
"
`;

exports[`Copy Dataset Member Success scenarios copy a single member 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy a single member and replace existing member 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy all members 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy with alias = true 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy with enqueue = SHRW 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Member Success scenarios copy with from and to volume specified 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;
